objects/PAN_SAP_Code__c.object
<CustomObject>
    <description>This is used store PAN information related to an account SSD (DPS-74).</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +  Source_System__r.Account_Name__c , Source_System__r.Account_Name__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Fee_Indicator__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Bundle Fee Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Indicator__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Deletion Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domains__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Domains</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABACUSCD</fullName>
                </value>
                <value>
                    <fullName>ABACUSP11D</fullName>
                </value>
                <value>
                    <fullName>ABACUSSVC</fullName>
                </value>
                <value>
                    <fullName>ABACUSHST</fullName>
                </value>
                <value>
                    <fullName>DIGITAHST</fullName>
                </value>
                <value>
                    <fullName>DIGITACD</fullName>
                </value>
                <value>
                    <fullName>DIGITAOT</fullName>
                </value>
                <value>
                    <fullName>CHECKPOINT</fullName>
                </value>
                <value>
                    <fullName>GCR</fullName>
                </value>
                <value>
                    <fullName>GTM</fullName>
                </value>
                <value>
                    <fullName>EPROPTXR</fullName>
                </value>
                <value>
                    <fullName>EPROPTXW</fullName>
                </value>
                <value>
                    <fullName>WINDS</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>INCOMTAXRS</fullName>
                </value>
                <value>
                    <fullName>INCOMTAXCD</fullName>
                </value>
                <value>
                    <fullName>SALESUSERS</fullName>
                </value>
                <value>
                    <fullName>SALESUSECD</fullName>
                </value>
                <value>
                    <fullName>TRUSTESTAT</fullName>
                </value>
                <value>
                    <fullName>TRUSTTAX</fullName>
                </value>
                <value>
                    <fullName>WRKSTATION</fullName>
                </value>
                <value>
                    <fullName>PROVISION</fullName>
                </value>
                <value>
                    <fullName>TRANSPRICE</fullName>
                </value>
                <value>
                    <fullName>LIQENGINES</fullName>
                </value>
                <value>
                    <fullName>OWM</fullName>
                </value>
                <value>
                    <fullName>NOPAC</fullName>
                </value>
                <value>
                    <fullName>INCEXPRS</fullName>
                </value>
                <value>
                    <fullName>INCEXPCD</fullName>
                </value>
                <value>
                    <fullName>TRUSTTXSVC</fullName>
                </value>
                <value>
                    <fullName>SUSRVATL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_Code__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Firm Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Type__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Firm Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_18_Digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID (18 Digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Indicator__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Market Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Firm_Alert__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>PAN Firm Alert</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Firm Alert</fullName>
                </value>
                <value>
                    <fullName>OneSource Firm Edition</fullName>
                </value>
                <value>
                    <fullName>Red Alert</fullName>
                </value>
                <value>
                    <fullName>Service Hold</fullName>
                </value>
                <value>
                    <fullName>Stop Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAN_Firm_Note__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>PAN Firm Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_PAN__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Parent PAN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Name_Text__c</fullName>
        <description>DPS-4584: Creating this field as part of LOTUS Corp WSS transformation, will hold the text value of Source System Detail Name, to be loaded by Informatica during insert only.
Should be changed if SSD Name value changes.</description>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Source System</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipName>PAN_Informations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Prep_Manager__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Tax Prep Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prep_Office__c</fullName>
        <description>This is used to store PAN information (DPS-74).</description>
        <label>Tax Prep Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PAN SAP Code</label>
    <nameField>
        <label>PAN SAP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAN SAP Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>